--- a/styles/Home.css
+++ b/styles/Home.css
@@ -185,7 +185,7 @@ main{
   text-align: center;
   border-radius: 10px;
   border: 3px solid white;
-  background-image: linear-gradient(rgba(255, 74, 68, 0.13)), url('/images/guzman-barquin-WqMWXqXR-HA-unsplash.jpg');
+  background-image: linear-gradient(rgba(255, 74, 68, 0.13)), url('../images/guzman-barquin-WqMWXqXR-HA-unsplash.jpg');
   color: white;
   width: 26.8172rem;
 }
@@ -205,7 +205,7 @@ main{
 /* why us section start */
 .whyUsSection{
   background-color: rgb(255, 75, 68);
-  background-image: linear-gradient(rgba(255, 74, 68, 0.863)), url('/images/guzman-barquin-WqMWXqXR-HA-unsplash.jpg');
+  background-image: linear-gradient(rgba(255, 74, 68, 0.863)), url('../images/guzman-barquin-WqMWXqXR-HA-unsplash.jpg');
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -254,7 +254,7 @@ main{
   padding: 2rem;
   text-align: center;
   font-size: 2rem;
-  background-image: url('/images/guzman-barquin-WqMWXqXR-HA-unsplash.jpg');
+  background-image: url('../images/guzman-barquin-WqMWXqXR-HA-unsplash.jpg');
   color: white;
 }
 .testimonialSection .userName{
@@ -271,7 +271,7 @@ main{
   justify-content: center; */
 }
 .blogContainer{
-  background-image: linear-gradient(rgba(255, 74, 68, 0.849)), url('/images/paul-schneider-NZkcNjgBOq0-unsplash.jpg');
+  background-image: linear-gradient(rgba(255, 74, 68, 0.849)), url('../images/paul-schneider-NZkcNjgBOq0-unsplash.jpg');
   background-position: center;
   color: white;
   display: flex;
