--- a/styles/Home.css
+++ b/styles/Home.css
@@ -75,7 +75,9 @@ nav ul a{
 .sideBarIcon{
   display: none;
 }
-
+.sideBarIcon a{
+  font-size: 2rem;
+}
 .sideBar{
   display: none;
   position: fixed;
@@ -105,7 +107,7 @@ nav ul a{
 /* header End */
 main{
   margin-top: 6.8rem;
-  padding: 2rem;
+  padding: 1rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -129,9 +131,9 @@ main{
   color: white;
 }
 .headine{
-  font-size: 4rem;
+  font-size: 3rem;
   text-align: center;
-  font-weight: bold;
+  font-weight: bolder;
 }
 .Subtext{
   font-size: 2rem;
@@ -145,7 +147,6 @@ main{
 }
 .bannerImageContainer{
   max-width: 50rem;
-  border: 2px solid red;
 }
 .bannerImageContainer div{
   width: 100%;
@@ -165,10 +166,10 @@ main{
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  row-gap: 1.5rem;
+  row-gap: 1rem;
 }
 .subHeadings{
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: bold;
   text-align: left;
   width: 100%;
@@ -226,6 +227,9 @@ main{
   width: 25px;
   height: 25px;
 }
+.match-card_vs{
+  margin: 0 10px;
+}
 .match-card_team-logo img{
   width: 100%;
   height:100%;
@@ -239,7 +243,7 @@ main{
   height: 100px;
   width: 2px;
   background-color: var(--ash-Color);
-  margin: 0 10px;
+  margin: 0;
 }
 .match-card-actions-ctn{
   padding-top: 11px;
@@ -265,7 +269,7 @@ main{
 .news-ctn{
   display: flex;
   flex-direction: column;
-  gap: 1.5rem;
+  gap: 1rem;
 }
 .news-card-ctn{
   display: flex;
